--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             display: none;
         }
     </style>
+    <script>
     function toggleFields() {
     var location = document.getElementById("location").value;
     if (location === "Bengaluru") {
